# cmeel-example

./: .cirrus.yml  .gitlab-ci.yml  .gitmodules  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  pyproject.toml
.github/workflows/: release.yml  test.yml  wheels.yml
docs/: release.sh
include/cmeel/example/: adder.hpp
python/: CMakeLists.txt
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt
