[project]
name = "cmeel-example"
version = "0.3.2"
description = "This is an example project, to show how to use cmeel"
readme = "README.md"
requires-python = ">= 3.8"
license = "BSD-2-Clause"
authors = [{name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr"}]

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-example"
repository = "https://github.com/cmake-wheel/cmeel-example.git"
changelog = "https://github.com/cmake-wheel/cmeel-example/CHANGELOG.md"

[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"

[tool.cibuildwheel]
repair-wheel-command = ""
